--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<p class="welcome start">Welcome on my portfolio page</p>
 		<div class="empty"></div>
 
-		<a class="enter-btn" href="./main.html">Start Visiting</a>
+		<a class="enter-btn" href="./pages/main.html">Start Visiting</a>
 	</div>
 	
 </body>
